feat: created button

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,5 +1,8 @@
+@import "reboot.scss";
+
 @import "tokens/tokens.css";
 @import "tokens/light.css";
 @import "tokens/dark.css";
 
 @import "icon.scss";
+@import "button.scss";
