feat: updated button and badge

--- a/src/styles/badge.scss
+++ b/src/styles/badge.scss
@@ -32,7 +32,7 @@
    transition: 0.3s;
 
    border: 0 {
-      radius: 10rem;
+      radius: var(--token-border-radius-pill);
    }
 
    &--icon {
