--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -37,7 +37,7 @@
    transition: 0.3s;
 
    border: 2px solid transparent {
-      radius: 0.75rem;
+      radius: var(--token-border-radius-default);
    }
 
    cursor: pointer;
