--- a/src/styles/reboot.scss
+++ b/src/styles/reboot.scss
@@ -15,3 +15,8 @@ body {
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+img {
+   height: auto;
+   width: 100%;
+}
