--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,5 +1,9 @@
 @import "reboot.scss";
 
+@import "variables.scss";
+@import "utils.scss";
+@import "grid.scss";
+
 @import "tokens/tokens.css";
 @import "tokens/light.css";
 @import "tokens/dark.css";
