--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -16,11 +16,14 @@
 
    &__brand {
       min-height: 64px;
+
+      img {
+         max-height: 64px;
+      }
    }
 
    &__content {
       display: flex;
-      max-width: 1125px;
       flex-wrap: inherit;
       align-items: center;
       justify-content: space-between;
@@ -30,6 +33,10 @@
       width: 100%;
 
       background: var(--token-background-primary);
+
+      @include break("md", "max-width") {
+         max-width: 100%;
+      }
    }
 
    &__toggle {
@@ -78,7 +85,7 @@
             transform: translateY(0.5rem);
          }
 
-         @include break("xs") {
+         @include break("sm") {
             display: none;
          }
       }
@@ -105,7 +112,23 @@
       justify-content: center;
       transition: 0.3s;
 
-      @include break("xs") {
+      position: absolute;
+      top: 100%;
+      right: 0;
+
+      width: 100%;
+
+      padding: 0 1rem;
+
+      background: var(--token-background-primary);
+
+      @include break("sm", "max-width") {
+         box-shadow: 0px 8px 8px var(--token-background-shadow);
+      }
+
+      @include break("sm") {
+         position: relative;
+         width: auto;
          display: flex !important;
          flex-basis: auto;
       }
@@ -134,7 +157,7 @@
          size: 1.5rem;
       }
 
-      @include break("xs") {
+      @include break("sm") {
          align-items: center;
          flex-direction: row;
          margin-top: 0;
@@ -166,7 +189,7 @@
          background: currentColor;
          transition: width 0.3s;
 
-         @include break("xs") {
+         @include break("sm") {
             left: 0;
          }
       }
