feat: updated theme

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -9,6 +9,7 @@
 @import "tokens/dark.css";
 
 @import "icon.scss";
+@import "progress.scss";
 @import "button.scss";
 @import "badge.scss";
 @import "textfield.scss";
