--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -53,6 +53,11 @@
 
 .col {
    flex: 1 0 0%;
+
+   &-flex {
+      display: flex;
+      flex-wrap: wrap;
+   }
 }
 
 @each $spacer, $value in $spacers {
