--- a/src/components/molecules/Pokemons/PokemonDetails/pokemons-details.scss
+++ b/src/components/molecules/Pokemons/PokemonDetails/pokemons-details.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins/breakpoints.scss";
+@import "../../../../styles/mixins/breakpoints.scss";
 
 .pokemon-details {
    position: fixed;
@@ -30,24 +30,13 @@
          weight: 700;
       }
       text-shadow: 0 0 8px var(--token-background-shadow);
+      text-transform: capitalize;
    }
 
-   .number {
+   .hash {
       font: {
          size: 18px;
          weight: 700;
-      }
-   }
-
-   &--plaint {
-      [class$="__image"] {
-         background-color: var(--token-color-green-base);
-         color: var(--token-color-white);
-      }
-      @include break("sm", "max-width") {
-         [class$="__close"] {
-            color: var(--token-color-white);
-         }
       }
    }
 
@@ -55,6 +44,7 @@
       display: flex;
       flex-direction: column-reverse;
       align-items: flex-start;
+      color: var(--token-color-white);
 
       width: 100%;
       height: 350px;
@@ -108,8 +98,9 @@
       order: 1;
       width: 100%;
 
-      border-radius: var(--token-border-radius-large);
-      min-height: calc(100vh - 350px);
+      border-radius: var(--token-border-radius-large)
+         var(--token-border-radius-large) 0 0;
+      height: calc(100vh - 335px);
 
       margin-top: -1rem;
 
@@ -126,6 +117,7 @@
          min-height: auto;
          margin: 0;
          padding-top: 1rem;
+         border-radius: var(--token-border-radius-large);
       }
 
       &-header {
@@ -141,6 +133,8 @@
       position: absolute;
       left: 1rem;
       top: 1rem;
+      color: var(--token-color-white);
+      z-index: 1;
 
       &.desktop {
          display: none;
@@ -150,6 +144,8 @@
          top: -2rem;
          right: 0;
          left: auto;
+
+         color: var(--token-color-body);
 
          &.desktop {
             display: initial;
