--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -19,3 +19,37 @@
 .bg-red {
    background: var(--token-color-coral-base);
 }
+
+.loading {
+   box-shadow: 0 4px 10px 0 rgba(33, 33, 33, 0.15);
+   border-radius: 4px;
+   height: 200px;
+   position: relative;
+   overflow: hidden;
+   background: var(--token-background-secondary);
+
+   &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      left: -150px;
+      top: 0;
+      height: 100%;
+      width: 150px;
+      background: linear-gradient(
+         to right,
+         transparent 0%,
+         var(--token-background-primary) 50%,
+         transparent 100%
+      );
+      animation: loading 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+   }
+}
+@keyframes loading {
+   from {
+      left: -150px;
+   }
+   to {
+      left: 100%;
+   }
+}
