--- a/src/pages/Pokemons/styles.scss
+++ b/src/pages/Pokemons/styles.scss
@@ -28,6 +28,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
+      margin: 0 0.5rem;
 
       .pokemon-card {
          flex: 1 1 100%;
