bugfix: sort and search

--- a/src/components/molecules/Slider/slider.scss
+++ b/src/components/molecules/Slider/slider.scss
@@ -78,7 +78,8 @@
             opacity: 0.8;
          }
 
-         &:checked {
+         &:checked,
+         &.checked {
             opacity: 1;
 
             &::after {
