feat: created page not found

--- a/src/pages/Pokemons/styles.scss
+++ b/src/pages/Pokemons/styles.scss
@@ -48,6 +48,10 @@
       }
    }
 
+   .not-pokemons {
+      max-height: 300px;
+   }
+
    .sort {
       display: flex;
       align-items: center;
